@@ -16,13 +16,59 @@
 
 package com.android.tools.lint;
 
+import static com.android.SdkConstants.CURRENT_PLATFORM;
 import static com.android.SdkConstants.DOT_9PNG;
 import static com.android.SdkConstants.DOT_PNG;
+import static com.android.SdkConstants.PLATFORM_LINUX;
+import static com.android.SdkConstants.UTF_8;
 import static com.android.tools.lint.detector.api.LintUtils.endsWith;
+import static java.io.File.separatorChar;
 
+import com.android.annotations.NonNull;
+import com.android.annotations.Nullable;
+import com.android.tools.lint.checks.AccessibilityDetector;
+import com.android.tools.lint.checks.AlwaysShowActionDetector;
+import com.android.tools.lint.checks.ApiDetector;
+import com.android.tools.lint.checks.AppCompatCallDetector;
+import com.android.tools.lint.checks.ByteOrderMarkDetector;
+import com.android.tools.lint.checks.CheckPermissionDetector;
+import com.android.tools.lint.checks.CommentDetector;
+import com.android.tools.lint.checks.DetectMissingPrefix;
+import com.android.tools.lint.checks.DosLineEndingDetector;
+import com.android.tools.lint.checks.DuplicateResourceDetector;
+import com.android.tools.lint.checks.GradleDetector;
+import com.android.tools.lint.checks.HardcodedValuesDetector;
+import com.android.tools.lint.checks.IncludeDetector;
+import com.android.tools.lint.checks.InefficientWeightDetector;
+import com.android.tools.lint.checks.JavaPerformanceDetector;
+import com.android.tools.lint.checks.ManifestDetector;
+import com.android.tools.lint.checks.MissingClassDetector;
+import com.android.tools.lint.checks.MissingIdDetector;
+import com.android.tools.lint.checks.NamespaceDetector;
+import com.android.tools.lint.checks.ObsoleteLayoutParamsDetector;
+import com.android.tools.lint.checks.PropertyFileDetector;
+import com.android.tools.lint.checks.PxUsageDetector;
+import com.android.tools.lint.checks.ScrollViewChildDetector;
+import com.android.tools.lint.checks.SecurityDetector;
+import com.android.tools.lint.checks.SharedPrefsDetector;
+import com.android.tools.lint.checks.SignatureOrSystemDetector;
+import com.android.tools.lint.checks.TextFieldDetector;
+import com.android.tools.lint.checks.TextViewDetector;
+import com.android.tools.lint.checks.TitleDetector;
+import com.android.tools.lint.checks.TranslationDetector;
+import com.android.tools.lint.checks.TypoDetector;
+import com.android.tools.lint.checks.TypographyDetector;
+import com.android.tools.lint.checks.UseCompoundDrawableDetector;
+import com.android.tools.lint.checks.UselessViewDetector;
+import com.android.tools.lint.checks.Utf8Detector;
+import com.android.tools.lint.checks.WrongCallDetector;
+import com.android.tools.lint.checks.WrongCaseDetector;
+import com.android.tools.lint.detector.api.Issue;
+import com.android.utils.SdkUtils;
 import com.google.common.annotations.Beta;
+import com.google.common.collect.Sets;
 import com.google.common.io.ByteStreams;
-import com.google.common.io.Closeables;
+import com.google.common.io.Closer;
 import com.google.common.io.Files;
 
 import java.io.File;
@@ -30,11 +76,14 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 
 /** A reporter is an output generator for lint warnings
  * <p>
@@ -52,6 +101,7 @@ public abstract class Reporter {
     protected File mResources;
     protected final Map<File, String> mResourceUrl = new HashMap<File, String>();
     protected final Map<String, File> mNameToFile = new HashMap<String, File>();
+    protected boolean mDisplayEmpty = true;
 
     /**
      * Write the given warnings into the report
@@ -126,31 +176,38 @@ public abstract class Reporter {
 
         if (mUrlMap != null) {
             String path = file.getAbsolutePath();
-            try {
-                // Perform the comparison using URLs such that we properly escape spaces etc.
-                String pathUrl = URLEncoder.encode(path, "UTF-8");         //$NON-NLS-1$
-                for (Map.Entry<String, String> entry : mUrlMap.entrySet()) {
-                    String prefix = entry.getKey();
-                    String prefixUrl = URLEncoder.encode(prefix, "UTF-8"); //$NON-NLS-1$
-                    if (pathUrl.startsWith(prefixUrl)) {
-                        String relative = pathUrl.substring(prefixUrl.length());
-                        return entry.getValue()
-                                + relative.replace("%2F", "/"); //$NON-NLS-1$ //$NON-NLS-2$
-                    }
+            // Perform the comparison using URLs such that we properly escape spaces etc.
+            String pathUrl = encodeUrl(path);
+            for (Map.Entry<String, String> entry : mUrlMap.entrySet()) {
+                String prefix = entry.getKey();
+                String prefixUrl = encodeUrl(prefix);
+                if (pathUrl.startsWith(prefixUrl)) {
+                    String relative = pathUrl.substring(prefixUrl.length());
+                    return entry.getValue() + relative;
                 }
-            } catch (UnsupportedEncodingException e) {
-                // This shouldn't happen for UTF-8
-                System.err.println("Invalid URL map specification - " + e.getLocalizedMessage());
             }
         }
 
-        return null;
+        if (file.isAbsolute()) {
+            String relativePath = getRelativePath(mOutput.getParentFile(), file);
+            if (relativePath != null) {
+                relativePath = relativePath.replace(separatorChar, '/');
+                return encodeUrl(relativePath);
+            }
+        }
+
+        try {
+            return SdkUtils.fileToUrlString(file);
+        } catch (MalformedURLException e) {
+            return null;
+        }
     }
 
     /** Encodes the given String as a safe URL substring, escaping spaces etc */
     static String encodeUrl(String url) {
         try {
-            return URLEncoder.encode(url, "UTF-8");         //$NON-NLS-1$
+            url = url.replace('\\', '/');
+            return URLEncoder.encode(url, UTF_8).replace("%2F", "/");         //$NON-NLS-1$
         } catch (UnsupportedEncodingException e) {
             // This shouldn't happen for UTF-8
             System.err.println("Invalid string " + e.getLocalizedMessage());
@@ -159,7 +216,7 @@ public abstract class Reporter {
     }
 
     /** Set mapping of path prefixes to corresponding URLs in the HTML report */
-    public void setUrlMap(Map<String, String> urlMap) {
+    public void setUrlMap(@Nullable Map<String, String> urlMap) {
         mUrlMap = urlMap;
     }
 
@@ -234,7 +291,7 @@ public abstract class Reporter {
 
     /** Returns a URL to a local copy of the given resource, or null. There is
      * no filename conflict resolution. */
-    protected String addLocalResources(URL url) {
+    protected String addLocalResources(URL url) throws IOException {
         // Attempt to make local copy
         File resourceDir = computeResourceDir();
         if (resourceDir != null) {
@@ -243,17 +300,211 @@ public abstract class Reporter {
             mNameToFile.put(base, new File(url.toExternalForm()));
 
             File target = new File(resourceDir, base);
+            Closer closer = Closer.create();
             try {
-                FileOutputStream output = new FileOutputStream(target);
-                InputStream input = url.openStream();
+                FileOutputStream output = closer.register(new FileOutputStream(target));
+                InputStream input = closer.register(url.openStream());
                 ByteStreams.copy(input, output);
-                Closeables.closeQuietly(output);
-                Closeables.closeQuietly(input);
-            } catch (IOException e) {
-                return null;
+            } catch (Throwable e) {
+                closer.rethrow(e);
+            } finally {
+                closer.close();
             }
             return resourceDir.getName() + '/' + encodeUrl(base);
         }
         return null;
+    }
+
+    // Based on similar code in com.intellij.openapi.util.io.FileUtilRt
+    @Nullable
+    static String getRelativePath(File base, File file) {
+        if (base == null || file == null) {
+            return null;
+        }
+        if (!base.isDirectory()) {
+            base = base.getParentFile();
+            if (base == null) {
+                return null;
+            }
+        }
+        if (base.equals(file)) {
+            return ".";
+        }
+
+        final String filePath = file.getAbsolutePath();
+        String basePath = base.getAbsolutePath();
+
+        // TODO: Make this return null if we go all the way to the root!
+
+        basePath = !basePath.isEmpty() && basePath.charAt(basePath.length() - 1) == separatorChar
+                ? basePath : basePath + separatorChar;
+
+        // Whether filesystem is case sensitive. Technically on OSX you could create a
+        // sensitive one, but it's not the default.
+        boolean caseSensitive = CURRENT_PLATFORM == PLATFORM_LINUX;
+        Locale l = Locale.getDefault();
+        String basePathToCompare = caseSensitive ? basePath : basePath.toLowerCase(l);
+        String filePathToCompare = caseSensitive ? filePath : filePath.toLowerCase(l);
+        if (basePathToCompare.equals(!filePathToCompare.isEmpty()
+                && filePathToCompare.charAt(filePathToCompare.length() - 1) == separatorChar
+                ? filePathToCompare : filePathToCompare + separatorChar)) {
+            return ".";
+        }
+        int len = 0;
+        int lastSeparatorIndex = 0;
+        // bug in inspection; see http://youtrack.jetbrains.com/issue/IDEA-118971
+        //noinspection ConstantConditions
+        while (len < filePath.length() && len < basePath.length()
+                && filePathToCompare.charAt(len) == basePathToCompare.charAt(len)) {
+            if (basePath.charAt(len) == separatorChar) {
+                lastSeparatorIndex = len;
+            }
+            len++;
+        }
+        if (len == 0) {
+            return null;
+        }
+
+        StringBuilder relativePath = new StringBuilder();
+        for (int i = len; i < basePath.length(); i++) {
+            if (basePath.charAt(i) == separatorChar) {
+                relativePath.append("..");
+                relativePath.append(separatorChar);
+            }
+        }
+        relativePath.append(filePath.substring(lastSeparatorIndex + 1));
+        return relativePath.toString();
+    }
+
+    /**
+     * Returns whether this report should display info (such as a path to the report) if
+     * no issues were found
+     */
+    public boolean isDisplayEmpty() {
+        return mDisplayEmpty;
+    }
+
+    /**
+     * Sets whether this report should display info (such as a path to the report) if
+     * no issues were found
+     */
+    public void setDisplayEmpty(boolean displayEmpty) {
+        mDisplayEmpty = displayEmpty;
+    }
+
+    private static Set<Issue> sAdtFixes;
+    private static Set<Issue> sStudioFixes;
+
+    /** Tools known to have quickfixes for lint */
+    enum QuickfixHandler {
+        /** Android Studio or IntelliJ */
+        STUDIO,
+        /** Eclipse */
+        ADT;
+
+        public boolean hasAutoFix(Issue issue) {
+            return Reporter.hasAutoFix(this, issue);
+        }
+    }
+
+    /**
+     * Returns true if the given issue has an automatic IDE fix.
+     *
+     * @param tool the name of the tool to be checked
+     * @param issue the issue to be checked
+     * @return true if the given tool is known to have an automatic fix for the
+     *         given issue
+     */
+    public static boolean hasAutoFix(@NonNull QuickfixHandler tool, Issue issue) {
+        if (tool == QuickfixHandler.ADT) {
+            if (sAdtFixes == null) {
+                sAdtFixes = Sets.newHashSet(
+                        InefficientWeightDetector.INEFFICIENT_WEIGHT,
+                        AccessibilityDetector.ISSUE,
+                        InefficientWeightDetector.BASELINE_WEIGHTS,
+                        HardcodedValuesDetector.ISSUE,
+                        UselessViewDetector.USELESS_LEAF,
+                        UselessViewDetector.USELESS_PARENT,
+                        PxUsageDetector.PX_ISSUE,
+                        TextFieldDetector.ISSUE,
+                        SecurityDetector.EXPORTED_SERVICE,
+                        DetectMissingPrefix.MISSING_NAMESPACE,
+                        ScrollViewChildDetector.ISSUE,
+                        ObsoleteLayoutParamsDetector.ISSUE,
+                        TypographyDetector.DASHES,
+                        TypographyDetector.ELLIPSIS,
+                        TypographyDetector.FRACTIONS,
+                        TypographyDetector.OTHER,
+                        TypographyDetector.QUOTES,
+                        UseCompoundDrawableDetector.ISSUE,
+                        ApiDetector.UNSUPPORTED,
+                        ApiDetector.INLINED,
+                        TypoDetector.ISSUE,
+                        ManifestDetector.ALLOW_BACKUP,
+                        MissingIdDetector.ISSUE,
+                        TranslationDetector.MISSING,
+                        DosLineEndingDetector.ISSUE
+                );
+            }
+            return sAdtFixes.contains(issue);
+        } else if (tool == QuickfixHandler.STUDIO) {
+            // List generated by AndroidLintInspectionToolProviderTest in tools/adt/idea
+            if (sStudioFixes == null) {
+                sStudioFixes = Sets.newHashSet(
+                        AccessibilityDetector.ISSUE,
+                        AlwaysShowActionDetector.ISSUE,
+                        ApiDetector.INLINED,
+                        ApiDetector.UNSUPPORTED,
+                        AppCompatCallDetector.ISSUE,
+                        ByteOrderMarkDetector.BOM,
+                        CheckPermissionDetector.ISSUE,
+                        CommentDetector.STOP_SHIP,
+                        DetectMissingPrefix.MISSING_NAMESPACE,
+                        DuplicateResourceDetector.TYPE_MISMATCH,
+                        GradleDetector.DEPENDENCY,
+                        GradleDetector.DEPRECATED,
+                        GradleDetector.PLUS,
+                        GradleDetector.REMOTE_VERSION,
+                        GradleDetector.STRING_INTEGER,
+                        IncludeDetector.ISSUE,
+                        InefficientWeightDetector.BASELINE_WEIGHTS,
+                        InefficientWeightDetector.INEFFICIENT_WEIGHT,
+                        InefficientWeightDetector.ORIENTATION,
+                        JavaPerformanceDetector.USE_VALUE_OF,
+                        ManifestDetector.ALLOW_BACKUP,
+                        ManifestDetector.APPLICATION_ICON,
+                        ManifestDetector.MOCK_LOCATION,
+                        ManifestDetector.TARGET_NEWER,
+                        MissingClassDetector.INNERCLASS,
+                        MissingIdDetector.ISSUE,
+                        NamespaceDetector.RES_AUTO,
+                        ObsoleteLayoutParamsDetector.ISSUE,
+                        PropertyFileDetector.ESCAPE,
+                        PropertyFileDetector.HTTP,
+                        PxUsageDetector.DP_ISSUE,
+                        PxUsageDetector.PX_ISSUE,
+                        ScrollViewChildDetector.ISSUE,
+                        SecurityDetector.EXPORTED_SERVICE,
+                        SharedPrefsDetector.ISSUE,
+                        SignatureOrSystemDetector.ISSUE,
+                        TextFieldDetector.ISSUE,
+                        TextViewDetector.SELECTABLE,
+                        TitleDetector.ISSUE,
+                        TypoDetector.ISSUE,
+                        TypographyDetector.DASHES,
+                        TypographyDetector.ELLIPSIS,
+                        TypographyDetector.FRACTIONS,
+                        TypographyDetector.OTHER,
+                        TypographyDetector.QUOTES,
+                        UselessViewDetector.USELESS_LEAF,
+                        Utf8Detector.ISSUE,
+                        WrongCallDetector.ISSUE,
+                        WrongCaseDetector.WRONG_CASE
+                );
+            }
+            return sStudioFixes.contains(issue);
+        }
+
+        return false;
     }
 }
